# AttackAgent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
attack_agent/: __init__.py  __main__.py  apg.py  browser_adapter.py  compilers.py  config.py  console.py  constraint_aware_reasoner.py  constraints.py  controller.py  ctfd_provider.py  dispatcher.py  dynamic_pattern_composer.py  embedding_adapter.py  enhanced_apg.py  factory.py  heuristic_free_exploration.py  http_adapter.py  model_adapter.py  models.py  observation_summarizer.py  path_selection.py  pattern_injector.py  platform.py  platform_demo.py  platform_models.py  provider.py  reasoning.py  runtime.py  semantic_retrieval.py  state_graph.py  strategy.py  world_state.py
config/: settings.json
docs/: ARCHITECTURE.md  CHANGELOG.md  CONVENTIONS.md  CURRENT_STATE.md  DOCUMENTATION_AUDIT.md  EXECUTION_PROMPT_TEMPLATE.md  HANDOFF_TEMPLATE.md  MVP_REFACTOR_PLAN.md  MVP_REFACTOR_PLAN_ZH.md  NEXT_STEPS.md  PLAN-P3-LLM-Feedback-Loop.md  PLATFORM_STATUS.md  STAGE1_REPORT.md  TEAM_EVOLUTION_ROADMAP.md  TEAM_PLATFORM_GUIDE.md  USER_GUIDE.md  WORKLOG_CONTROL.md  WORKLOG_MVP.md  WORKLOG_STRUCTURE.md  WORK_INSTRUCTIONS.md
scripts/: local_range.py
tests/: test_apg_engine.py  test_browser_adapter.py  test_cli.py  test_constraint_aware_reasoner.py  test_constraints.py  test_ctfd_provider.py  test_dynamic_pattern_composer.py  test_embedding_adapter.py  test_enhanced_apg.py  test_event_compat.py  test_heuristic_free_exploration.py  test_http_adapter.py  test_l1_acceptance.py  test_model_adapter.py  test_observation_summarizer.py  test_path_selection.py  test_provider.py  (+42 more)
(+72 files in other folders)
