[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "attack-agent"
version = "0.1.0"
description = "Safe-by-default competition pentest agent scaffold for authorized labs and CTF ranges."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["attack_agent*"]
