[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "attack-agent"
version = "0.1.0"
description = "Safe-by-default competition pentest agent scaffold for authorized labs and CTF ranges."
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
all-models = ["openai>=1.0", "anthropic>=0.20"]

[tool.setuptools.packages.find]
include = ["attack_agent*"]
