[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "attack-agent"
version = "0.1.0"
description = "Safe-by-default competition pentest agent scaffold for authorized labs and CTF ranges."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
attack-agent = "attack_agent.__main__:main"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
http = ["requests>=2.28"]
browser = ["playwright>=1.40"]
all-models = ["openai>=1.0", "anthropic>=0.20"]
all = ["openai>=1.0", "anthropic>=0.20", "requests>=2.28", "playwright>=1.40"]

[tool.setuptools.packages.find]
include = ["attack_agent*"]
